--- a/WhiteBlog/Shared/MainLayout.razor
+++ b/WhiteBlog/Shared/MainLayout.razor
@@ -13,14 +13,14 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="/">主页</a>
+                <a class="nav-link" href="/"><i class="bi-house-door-fill"></i>主页</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/fetchdata">博文</a>
+                <a class="nav-link" href="/fetchdata"><i class="bi bi-archive-fill"></i>博文</a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
-                    分类
+                    <i class="bi bi-x-diamond-fill"></i>分类
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="#">C++</a>
@@ -32,21 +32,21 @@
                 </div>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">标签</a>
+                <a class="nav-link" href="#"><i class="bi bi-tags-fill"></i>标签</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">碎碎念</a>
+                <a class="nav-link" href="#"><i class="bi bi-stars"></i>碎碎念</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">友情链接</a>
+                <a class="nav-link" href="#"><i class="bi bi-link-45deg"></i>友情链接</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">关于</a>
+                <a class="nav-link" href="#"><i class="bi bi-emoji-smile"></i>关于</a>
             </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
+            <button class="btn btn-outline-light my-2 my-sm-0" type="submit"><i class="bi bi-search"></i></button>
         </form>
     </div>
 </nav>
