--- a/WhiteBlog/Pages/Index.razor
+++ b/WhiteBlog/Pages/Index.razor
@@ -19,7 +19,7 @@
             <div class="carousel-item active">
                 <div class="container">
                     <div class="row justify-content-md-center">
-                        <img src="funs/C Sharp.jpg" class="d-block" height="300" width="400">
+                        <img src="C Sharp.jpg" class="d-block" height="300" width="400">
                     </div>
                 </div>
 
@@ -35,7 +35,7 @@
             <div class="carousel-item">
                 <div class="container">
                     <div class="row justify-content-md-center">
-                        <img src="funs/python.jpg" class="d-block" alt=".." height="300" width="400">
+                        <img src="python.jpg" class="d-block" alt=".." height="300" width="400">
                     </div>
                 </div>
                 <div class="carousel-caption d-none d-md-block">
@@ -49,7 +49,7 @@
             <div class="carousel-item">
                 <div class="container">
                     <div class="row justify-content-md-center">
-                        <img src="funs/pi.jpg" class="d-block" alt=".." height="300" width="400">
+                        <img src="pi.jpg" class="d-block" alt=".." height="300" width="400">
                     </div>
                 </div>
                 <div class="carousel-caption d-none d-md-block">
